--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.js'></script>
+  <script src="https://unpkg.com/marked@0.3.6"></script>
   <meta name="viewport" content="width=375" >
   <title>慶應弓道同好会 KQC | 慶應義塾大学の弓道サークル</title>
 </head>
