--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://unpkg.com/marked@0.3.6"></script>
+  <script src="https://unpkg.com/vuex@3.0.1"></script>
   <meta name="viewport" content="width=375" >
   <title>慶應弓道同好会 KQC | 慶應義塾大学の弓道サークル</title>
 </head>
